--- a/frontend/src/comonent/header/header.scss
+++ b/frontend/src/comonent/header/header.scss
@@ -1,5 +1,3 @@
-
-
 .header {
   padding: 10px 0;
 
@@ -34,7 +32,7 @@
     }
 
     &:hover {
-      background-color: lighten(rgb(12, 115, 254), 10)
+      background-color: lighten(rgb(12, 115, 254), 10);
     }
   }
 
@@ -63,5 +61,44 @@
       height: 25px;
       width: 23px;
     }
+  }
+
+  &__search-wrapper {
+    display: flex;
+    align-items: center;
+    width: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 200ms ease-in-out;
+    margin-right: 15px;
+
+    &.open {
+      width: 360px;
+      opacity: 1;
+      visibility: visible;
+    }
+
+    input {
+      border-radius: 15px;
+      padding: 7px 20px;
+      border: none;
+      width: 100%;
+    }
+  }
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+
+  &__img {
+    width: 100%;
+    max-width: 50px;
+    margin-right: 10px;
+  }
+
+  &__title {
+    font-size: 2.5rem;
+    font-weight: 600;
   }
 }
